# 2type-sim

./: .Rbuildignore  .gitignore  DESCRIPTION  INSTALL_WINDOWS.md  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: RcppExports.R  r2type.R
extras/: build_ARB.sh  gillespie.R  setup.sh  testpgf.r
inst/include/: arbcmath.h  complex_functions.H  p2type.h  pgf_functions.cpp  pgf_functions.h  twotype_pgf.h
man/: p2type1.Rd  p2type2.Rd  r2type.Rd  rbdm.Rd  sim2type-package.Rd  ssa.Rd  ssa.single.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  p2type.cpp  twotype_pgf.cpp
